--- a/index.html
+++ b/index.html
@@ -171,36 +171,49 @@
         <div class="projects-wrap">
             <h2>Moje projekty</h2>
             <section class="sectionProjects">
-                <div class="project">
-                    <div class="projectBgc">
+                <a href="projects/canvaBgc/canvaBgc.html">
+                    <div class="project">
+                        <div class="projectBgc">
+                        </div>
+                        <p>Canva bgc</p>
                     </div>
-                    <p>Canva bgc</p>
-                </div>
-                <div class="project">
-                    <div class="projectBgc">
+                </a>
+                <a href="projects/canvaKrajen/canvaKrajen.html">
+                    <div class="project">
+                        <div class="projectBgc">
+                        </div>
+                        <p>Canva Krajen</p>
                     </div>
-                    <p>Siema</p>
-                </div>
-                <div class="project">
-                    <div class="projectBgc">
+                </a>
+                <a href="projects/canvaBgc.html">
+                    <div class="project">
+                        <div class="projectBgc">
+                        </div>
+                        <p>undefined</p>
                     </div>
-                    <p>Siema</p>
-                </div>
-                <div class="project">
-                    <div class="projectBgc">
+                </a>
+                <a href="projects/canvaBgc.html">
+                    <div class="project">
+                        <div class="projectBgc">
+                        </div>
+                        <p>undefined</p>
                     </div>
-                    <p>Siema</p>
-                </div>
-                <div class="project">
-                    <div class="projectBgc">
+                </a>
+                <a href="projects/canvaBgc.html">
+                    <div class="project">
+                        <div class="projectBgc">
+                        </div>
+                        <p>undefined</p>
                     </div>
-                    <p>Siema</p>
-                </div>
-                <div class="project">
-                    <div class="projectBgc">
+                </a>
+                <a href="projects/canvaBgc.html">
+                    <div class="project">
+                        <div class="projectBgc">
+                        </div>
+                        <p>undefined</p>
                     </div>
-                    <p>Siema</p>
-                </div>
+                </a>
+
             </section>
         </div>
     </div>
