--- a/index.html
+++ b/index.html
@@ -21,216 +21,198 @@
 </head>
 
 <body>
-    <button class="up">
-        <i class="fas fa-arrow-circle-up"></i>
-    </button>
-    <div class="wrapper">
-        <div class="header-wrap">
-            <button class="burger">
-                <div class="burger-box">
-                    <div class="burger-inner">
+    <header>
+        <button class="up">
+            <i class="fas fa-arrow-circle-up"></i>
+        </button>
+        <div class="wrapper">
+            <div class="header-wrap">
+                <button class="burger">
+                    <div class="burger-box">
+                        <div class="burger-inner">
+                        </div>
                     </div>
-                </div>
-            </button>
-            <nav>
-                <div class="me1 me">
-                    <a href="#">
-                        O mnie
-                    </a>
-                </div>
-                <div class="me2 me">
-                    <a href="#">
-                        Realizacje
-                    </a>
-                </div>
-                <div class="me3 me">
-                    <a href="#">
-                        Projekty
-                    </a>
-                </div>
-                <div class="me4 me">
-                    <a href="#">
-                        Kontakt
-                    </a>
-                </div>
-            </nav>
-            <div class="header">
-                <div class="welcome">
-                    <h2>Cześć,</h2>
-                    <br>
-                    <h2>tu Konrad!</h2>
-                    <a href="https://www.instagram.com/konradrejentowicz/" target="_blank">
-                        sprawdź mój instagram
-                        <i class="fab fa-instagram ig"></i>
-                    </a>
+                </button>
+                <nav>
+                    <div class="me1 me">
+                        <a href="#">
+                            O mnie
+                        </a>
+                    </div>
+                    <div class="me2 me">
+                        <a href="#">
+                            Realizacje
+                        </a>
+                    </div>
+                    <div class="me3 me">
+                        <a href="#">
+                            Projekty
+                        </a>
+                    </div>
+                    <div class="me4 me">
+                        <a href="#">
+                            Kontakt
+                        </a>
+                    </div>
+                </nav>
+                <div class="header">
+                    <div class="welcome">
+                        <h2>Cześć,</h2>
+                        <br>
+                        <h2>tu Konrad!</h2>
+                        <a href="https://www.instagram.com/konradrejentowicz/" target="_blank">
+                            sprawdź mój instagram
+                            <i class="fab fa-instagram ig"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="about">
-        <h2>Kim jestem?</h2>
-        <p>Jestem studentem informatyki Wyższej Szkoły Bankowej w Gdańsku. Moja specjalizaja to Front-End Developer</p>
-        <br>
-    </div>
-    <div class="technology">
-        <h3>Technologie jakimi się posługuję:</h3>
-        <section class="techImg">
-            <div class="tech">
-                <i class="fab fa-html5"></i>
-            </div>
-            <div class="tech">
-                <i class="fab fa-css3-alt"></i>
-            </div>
-            <div class="tech">
-                <i class="fab fa-js"></i>
+    </header>
+    <main>
+        <section class="about">
+            <h2>Kim jestem?</h2>
+            <p>Jestem studentem informatyki Wyższej Szkoły Bankowej w Gdańsku.</p>
+            <br>
+        </section>
+        <section class="technology">
+            <h3>Technologie jakimi się posługuję:</h3>
+            <div class="techImg">
+                <div class="tech">
+                    <i class="fab fa-html5"></i>
+                </div>
+                <div class="tech">
+                    <i class="fab fa-css3-alt"></i>
+                </div>
+                <div class="tech">
+                    <i class="fab fa-js"></i>
+                </div>
             </div>
         </section>
-    </div>
-    <div class="photos">
-        <div class="photos-wrap">
-            <h2>Moje realizacje</h2>
-            <section class="gallery">
-                <div class="img-wrap">
-                    <div class="img">
-                        <div class="bgc">
-                            <a href="/img/max/1max.jpg" class="imgFull" data-lightbox="roadtrip">
-                                <p>Miasto</p>
-                            </a>
+        <section class="photos">
+            <div class="photos-wrap">
+                <h2>Moje realizacje</h2>
+                <div class="gallery">
+                    <div class="img-wrap">
+                        <div class="img">
+                            <div class="bgc">
+                                <a href="/img/max/1max.jpg" class="imgFull" data-lightbox="roadtrip">
+                                    <p>Miasto</p>
+                                </a>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="img-wrap">
-                    <div class="img">
-                        <div class="bgc">
-                            <a href="/img/max/2max.jpg" class="imgFull" data-lightbox="roadtrip">
-                                <p>Odwaga</p>
-                            </a>
+                    <div class="img-wrap">
+                        <div class="img">
+                            <div class="bgc">
+                                <a href="/img/max/2max.jpg" class="imgFull" data-lightbox="roadtrip">
+                                    <p>Odwaga</p>
+                                </a>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="img-wrap">
-                    <div class="img">
-                        <div class="bgc">
-                            <a href="/img/max/3max.jpg" class="imgFull" data-lightbox="roadtrip">
-                                <p>Metro</p>
-                            </a>
+                    <div class="img-wrap">
+                        <div class="img">
+                            <div class="bgc">
+                                <a href="/img/max/3max.jpg" class="imgFull" data-lightbox="roadtrip">
+                                    <p>Metro</p>
+                                </a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="img-wrap">
-                    <div class="img">
-                        <div class="bgc">
-                            <a href="/img/max/4max.jpg" class="imgFull" data-lightbox="roadtrip">
-                                <p>Taxi</p>
-                            </a>
+                    <div class="img-wrap">
+                        <div class="img">
+                            <div class="bgc">
+                                <a href="/img/max/4max.jpg" class="imgFull" data-lightbox="roadtrip">
+                                    <p>Taxi</p>
+                                </a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="img-wrap">
-                    <div class="img">
-                        <div class="bgc">
-                            <a href="/img/max/5max.jpg" class="imgFull" data-lightbox="roadtrip">
-                                <p>Patriota</p>
-                            </a>
+                    <div class="img-wrap">
+                        <div class="img">
+                            <div class="bgc">
+                                <a href="/img/max/5max.jpg" class="imgFull" data-lightbox="roadtrip">
+                                    <p>Patriota</p>
+                                </a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="img-wrap">
-                    <div class="img">
-                        <div class="bgc">
-                            <a href="/img/max/6max.jpg" class="imgFull" data-lightbox="roadtrip">
-                                <p>Brooklyn</p>
-                            </a>
+                    <div class="img-wrap">
+                        <div class="img">
+                            <div class="bgc">
+                                <a href="/img/max/6max.jpg" class="imgFull" data-lightbox="roadtrip">
+                                    <p>Brooklyn</p>
+                                </a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="img-wrap">
-                    <div class="img">
-                        <div class="bgc">
-                            <a href="/img/max/7max.jpg" class="imgFull" data-lightbox="roadtrip">
-                                <p>Jenga</p>
-                            </a>
+                    <div class="img-wrap">
+                        <div class="img">
+                            <div class="bgc">
+                                <a href="/img/max/7max.jpg" class="imgFull" data-lightbox="roadtrip">
+                                    <p>Jenga</p>
+                                </a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="img-wrap">
-                    <div class="img">
-                        <div class="bgc">
-                            <a href="/img/max/8max.jpg" class="imgFull" data-lightbox="roadtrip">
-                                <p>Liberty</p>
-                            </a>
+                    <div class="img-wrap">
+                        <div class="img">
+                            <div class="bgc">
+                                <a href="/img/max/8max.jpg" class="imgFull" data-lightbox="roadtrip">
+                                    <p>Liberty</p>
+                                </a>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </section>
-        </div>
-    </div>
-    <div class="projects">
-        <div class="projects-wrap">
-            <h2>Moje projekty</h2>
-            <section class="sectionProjects">
-                <a href="projects/canvaBgc/canvaBgc.html">
-                    <div class="project">
-                        <div class="projectBgc">
-                        </div>
-                        <p>Canva bgc</p>
-                    </div>
-                </a>
-                <a href="projects/canvaKrajen/canvaKrajen.html">
-                    <div class="project">
-                        <div class="projectBgc">
-                        </div>
-                        <p>Canva Krajen</p>
-                    </div>
-                </a>
-                <a href="projects/canvaBgc.html">
-                    <div class="project">
-                        <div class="projectBgc">
-                        </div>
-                        <p>undefined</p>
-                    </div>
-                </a>
-                <a href="projects/canvaBgc.html">
-                    <div class="project">
-                        <div class="projectBgc">
-                        </div>
-                        <p>undefined</p>
-                    </div>
-                </a>
-                <a href="projects/canvaBgc.html">
-                    <div class="project">
-                        <div class="projectBgc">
-                        </div>
-                        <p>undefined</p>
-                    </div>
-                </a>
-                <a href="projects/canvaBgc.html">
-                    <div class="project">
-                        <div class="projectBgc">
-                        </div>
-                        <p>undefined</p>
-                    </div>
-                </a>
-
-            </section>
-        </div>
-    </div>
-    <div class="contact">
-        <div class="contact-wrap">
-            <h2>Kontakt</h2>
-            <div class="con">
-                <input type="text" name="mail" placeholder="Twój email" class="mail">
-                <textarea name="text" placeholder="w czym mogę Ci pomóc?" class="text"></textarea>
-                <button class="submit">Wyślij</button>
-                <div class="phone">
-                    <i class="fas fa-phone-alt"></i>
-                    <p>+48 513 855 456</p>
                 </div>
             </div>
-        </div>
-    </div>
+        </section>
+        <section class="projects">
+            <div class="projects-wrap">
+                <h2>Moje projekty</h2>
+                <div class="sectionProjects">
+                    <a href="projects/canvaKrajen/canvaKrajen.html">
+                        <div class="project">
+                            <div class="projectBgc">
+                            </div>
+                            <p>Canva Krajen</p>
+                        </div>
+                    </a>
+                    <a href="projects/todoList/index.html">
+                        <div class="project">
+                            <div class="projectBgc">
+                            </div>
+                            <p>Todo list</p>
+                        </div>
+                    </a>
+                    <a href="projects/dragSlider/index.html">
+                        <div class="project">
+                            <div class="projectBgc">
+                            </div>
+                            <p>Drag slider</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </section>
+        <section class="contact">
+            <div class="contact-wrap">
+                <h2>Kontakt</h2>
+                <div class="con">
+                    <input type="text" name="mail" placeholder="Twój email" class="mail">
+                    <textarea name="text" placeholder="w czym mogę Ci pomóc?" class="text"></textarea>
+                    <button class="submit">Wyślij</button>
+                    <div class="phone">
+                        <i class="fas fa-phone-alt"></i>
+                        <p>+48 513 855 456</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer>
         <div class="footer-wrap">
             <p>Rejentowicz &copy; Wszelkie prawa zastrzeżone </p>
