--- a/index.html
+++ b/index.html
@@ -195,6 +195,13 @@
                             <p>Drag slider</p>
                         </div>
                     </a>
+                    <a href="projects/swiperSlider/index.html">
+                        <div class="project">
+                            <div class="projectBgc">
+                            </div>
+                            <p>Swiper slider</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
