--- a/projects/swiperSlider/index.html
+++ b/projects/swiperSlider/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="logo">
-            HOME
+            <a href="../../index.html">HOME</a>
         </div>
         <nav>
             burger
