--- a/index.html
+++ b/index.html
@@ -202,6 +202,13 @@
                             <p>Swiper slider</p>
                         </div>
                     </a>
+                    <a href="projects/darkTheme/index.html">
+                        <div class="project">
+                            <div class="projectBgc">
+                            </div>
+                            <p>Dark theme</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
