--- a/projects/darkTheme/index.html
+++ b/projects/darkTheme/index.html
@@ -15,7 +15,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-    <link href="dist/css/lightbox.min.css" rel="stylesheet" />
+    <!-- <link href="dist/css/lightbox.min.css" rel="stylesheet" /> -->
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -31,5 +31,7 @@
         <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
         <button>Button</button>
     </main>
+
+    <script src="app.js"></script>
 </body>
 </html>
