--- a/projects/darkTheme/index.html
+++ b/projects/darkTheme/index.html
@@ -29,7 +29,7 @@
     <main>
         <p>Quisque ac lacus et tellus lacinia aliquam at posuere mauris.</p>
         <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-        <button>Button</button>
+        <button><a href="../../index.html">Back to main page</a></button>
     </main>
 
     <script src="app.js"></script>
